tp4_bis/obj/ejemplo.output
Estado 154 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 155 conflictos: 29 desplazamiento(s)/reducción(ones)
Estado 228 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: declaracionExterna
    4     | sentencia
    5     | error ';'

    6 declaracion: especDeclaracion listaDeclaradoresBis ';'

    7 especDeclaracionBis: /* vacío */
    8                    | especDeclaracion

    9 especDeclaracion: especClase especDeclaracionBis
   10                 | especTipo especDeclaracionBis

   11 listaDeclaradoresBis: /* vacío */
   12                     | listaDeclaradores

   13 listaDeclaradores: declarador
   14                  | listaDeclaradores ',' declarador

   15 declarador: decla
   16           | decla '=' inicializador

   17 inicializador: expAsignacion
   18              | '{' listaDeInicializadores '}'

   19 listaDeInicializadores: inicializador
   20                       | listaDeInicializadores ',' inicializador

   21 especClase: CLASE_ALMACENAMIENTO

   22 especTipo: TIPO_DATO
   23          | especStructUnion

   24 especStructUnion: STRUCT_UNION ID opcionLista
   25                 | STRUCT_UNION '{' listaDeclaracionesStruct '}'

   26 listaDeclaracionesStruct: declaracionStruct
   27                         | listaDeclaracionesStruct declaracionStruct

   28 declaracionStruct: listaCalificadores declaradoresStruct ';'

   29 listaCalificadores: especTipo listaCalificadoresBis

   30 listaCalificadoresBis: /* vacío */
   31                      | listaCalificadores

   32 opcionLista: /* vacío */
   33            | '{' listaDeclaracionesStruct '}'

   34 declaradoresStruct: declaStruct
   35                   | declaradoresStruct ',' declaStruct

   36 declaStruct: decla
   37            | declaBis ':' expCondicional

   38 decla: puntero declaradorDirecto
   39      | declaradorDirecto

   40 declaBis: /* vacío */
   41         | decla

   42 declaradorDirecto: ID
   43                  | declaradorDirecto '[' expCondicionalBis ']'
   44                  | declaradorDirecto '(' listaTiposParametros ')'

   45 listaTiposParametros: listaParametros
   46                     | listaParametros ',' '.' '.' '.'

   47 listaTiposParametrosBis: /* vacío */
   48                        | listaTiposParametros

   49 listaParametros: declaracionParametro
   50                | listaParametros ',' declaracionParametro

   51 declaracionParametro: especDeclaracion decla
   52                     | especDeclaracion declaradorAbstracto

   53 nombreTipo: listaCalificadores declaradorAbstractoBis

   54 declaradorAbstracto: puntero declaradorAbstractoDirecto
   55                    | declaradorAbstractoDirecto
   56                    | puntero

   57 declaradorAbstractoBis: /* vacío */
   58                       | declaradorAbstracto

   59 declaradorAbstractoDirecto: '(' declaradorAbstracto ')'
   60                           | declaradorAbstractoDirecto opcionExpresion
   61                           | opcionExpresion

   62 opcionExpresion: '[' expCondicionalBis ']'
   63                | '(' listaTiposParametrosBis ')'

   64 sentencia: sentCompuesta
   65          | sentExpresion
   66          | sentSeleccion
   67          | sentIteracion
   68          | sentSalto
   69          | sentEtiquetada

   70 sentExpresion: exp ';'
   71              | ';'

   72 sentCompuesta: '{' decalracionOSentencia '}'

   73 decalracionOSentencia: /* vacío */
   74                      | decalracionOSentencia listaDeclaraciones
   75                      | decalracionOSentencia listaSentencias

   76 listaDeclaraciones: declaracionExterna
   77                   | listaDeclaraciones declaracionExterna

   78 listaDeclaracionesBis: /* vacío */
   79                      | listaDeclaraciones

   80 listaSentencias: sentencia
   81                | listaSentencias sentencia

   82 puntero: '*'
   83        | '*' puntero

   84 sentSeleccion: IF '(' exp ')' sentencia
   85              | IF '(' exp ')' sentencia ELSE sentencia
   86              | SWITCH '(' exp ')' sentencia

   87 sentIteracion: WHILE '(' exp ')' sentencia
   88              | DO sentencia WHILE '(' exp ')' ';'
   89              | FOR '(' expOp ';' expOp ';' expOp ')' sentencia

   90 sentEtiquetada: CASE expCondicional ':' sentencia
   91               | DEFAULT ':' sentencia
   92               | ID ':' sentencia

   93 sentSalto: RETURN expOp ';'
   94          | BREAK ';'
   95          | CONTINUE ';'
   96          | GOTO ID ';'

   97 exp: expAsignacion
   98    | exp ',' expAsignacion

   99 expOp: /* vacío */
  100      | exp

  101 expAsignacion: expCondicional
  102              | expUnaria operAsignacion expAsignacion

  103 expCondicional: expOr
  104               | expOr '?' exp ':' expCondicional

  105 expCondicionalBis: /* vacío */
  106                  | expCondicional

  107 operAsignacion: '='
  108               | ASIGNACION_INCREMENTO
  109               | ASIGNACION_DECREMENTO
  110               | ASIGNACION_PRODUCTO
  111               | ASIGNACION_DIVISION

  112 expOr: expAnd
  113      | expOr OR expAnd

  114 expAnd: expIgualdad
  115       | expAnd AND expIgualdad

  116 expIgualdad: expRelacional
  117            | expIgualdad IGUALDAD expRelacional
  118            | expIgualdad DESIGUALDAD expRelacional

  119 expRelacional: expAditiva
  120              | expRelacional '<' expAditiva
  121              | expRelacional '>' expAditiva
  122              | expRelacional MENORIGUAL expAditiva
  123              | expRelacional MAYORIGUAL expAditiva

  124 expAditiva: expMultiplicativa
  125           | expAditiva '+' expMultiplicativa
  126           | expAditiva '-' expMultiplicativa

  127 expMultiplicativa: expUnaria
  128                  | expMultiplicativa '*' expUnaria
  129                  | expMultiplicativa '/' expUnaria
  130                  | expMultiplicativa '%' expUnaria

  131 expUnaria: expSufijo
  132          | INCREMENTO expUnaria
  133          | DECREMENTO expUnaria
  134          | '-' expUnaria
  135          | '+' expUnaria
  136          | '~' expUnaria
  137          | '!' expUnaria
  138          | '&' expUnaria
  139          | puntero expUnaria
  140          | SIZEOF '(' expUnaria ')'
  141          | SIZEOF '(' nombreTipo ')'

  142 expSufijo: expPrimaria
  143          | expSufijo '[' exp ']'
  144          | expSufijo '(' listaArgumentos ')'
  145          | expSufijo '.' ID
  146          | expSufijo FLECHA ID
  147          | expSufijo INCREMENTO
  148          | expSufijo DECREMENTO

  149 expPrimaria: ID
  150            | ENTERO
  151            | REAL
  152            | CTE_CARACTER
  153            | LITERAL_CADENA
  154            | NULL1
  155            | '(' exp ')'

  156 listaArgumentos: /* vacío */
  157                | expAsignacion
  158                | listaArgumentos ',' expAsignacion

  159 declaracionExterna: definicionFuncion
  160                   | declaracion

  161 definicionFuncion: especDeclaracion decla listaDeclaracionesBis sentCompuesta


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 137
'%' (37) 130
'&' (38) 138
'(' (40) 44 59 63 84 85 86 87 88 89 140 141 144 155
')' (41) 44 59 63 84 85 86 87 88 89 140 141 144 155
'*' (42) 82 83 128
'+' (43) 125 135
',' (44) 14 20 35 46 50 98 158
'-' (45) 126 134
'.' (46) 46 145
'/' (47) 129
':' (58) 37 90 91 92 104
';' (59) 5 6 28 70 71 88 89 93 94 95 96
'<' (60) 120
'=' (61) 16 107
'>' (62) 121
'?' (63) 104
'[' (91) 43 62 143
']' (93) 43 62 143
'{' (123) 18 25 33 72
'}' (125) 18 25 33 72
'~' (126) 136
error (256) 5
REAL (258) 151
ENTERO (259) 150
LITERAL_CADENA (260) 153
OR (261) 113
AND (262) 115
IGUALDAD (263) 117
DESIGUALDAD (264) 118
MAYORIGUAL (265) 123
MENORIGUAL (266) 122
INCREMENTO (267) 132 147
DECREMENTO (268) 133 148
ASIGNACION_INCREMENTO (269) 108
ASIGNACION_DECREMENTO (270) 109
ASIGNACION_PRODUCTO (271) 110
ASIGNACION_DIVISION (272) 111
FLECHA (273) 146
IF (274) 84 85
ELSE (275) 85
SWITCH (276) 86
WHILE (277) 87 88
DO (278) 88
FOR (279) 89
RETURN (280) 93
CONTINUE (281) 95
BREAK (282) 94
CASE (283) 90
DEFAULT (284) 91
GOTO (285) 96
NULL1 (286) 154
TIPO_DATO (287) 22
CLASE_ALMACENAMIENTO (288) 21
STRUCT_UNION (289) 24 25
ID (290) 24 42 92 96 145 146 149
SIZEOF (291) 140 141
CTE_CARACTER (292) 152


No terminales con las reglas donde aparecen

$accept (60)
    en la izquierda: 0
input (61)
    en la izquierda: 1 2, en la derecha: 0 2
line (62)
    en la izquierda: 3 4 5, en la derecha: 2
declaracion (63)
    en la izquierda: 6, en la derecha: 160
especDeclaracionBis (64)
    en la izquierda: 7 8, en la derecha: 9 10
especDeclaracion (65)
    en la izquierda: 9 10, en la derecha: 6 8 51 52 161
listaDeclaradoresBis (66)
    en la izquierda: 11 12, en la derecha: 6
listaDeclaradores (67)
    en la izquierda: 13 14, en la derecha: 12 14
declarador (68)
    en la izquierda: 15 16, en la derecha: 13 14
inicializador (69)
    en la izquierda: 17 18, en la derecha: 16 19 20
listaDeInicializadores (70)
    en la izquierda: 19 20, en la derecha: 18 20
especClase (71)
    en la izquierda: 21, en la derecha: 9
especTipo (72)
    en la izquierda: 22 23, en la derecha: 10 29
especStructUnion (73)
    en la izquierda: 24 25, en la derecha: 23
listaDeclaracionesStruct (74)
    en la izquierda: 26 27, en la derecha: 25 27 33
declaracionStruct (75)
    en la izquierda: 28, en la derecha: 26 27
listaCalificadores (76)
    en la izquierda: 29, en la derecha: 28 31 53
listaCalificadoresBis (77)
    en la izquierda: 30 31, en la derecha: 29
opcionLista (78)
    en la izquierda: 32 33, en la derecha: 24
declaradoresStruct (79)
    en la izquierda: 34 35, en la derecha: 28 35
declaStruct (80)
    en la izquierda: 36 37, en la derecha: 34 35
decla (81)
    en la izquierda: 38 39, en la derecha: 15 16 36 41 51 161
declaBis (82)
    en la izquierda: 40 41, en la derecha: 37
declaradorDirecto (83)
    en la izquierda: 42 43 44, en la derecha: 38 39 43 44
listaTiposParametros (84)
    en la izquierda: 45 46, en la derecha: 44 48
listaTiposParametrosBis (85)
    en la izquierda: 47 48, en la derecha: 63
listaParametros (86)
    en la izquierda: 49 50, en la derecha: 45 46 50
declaracionParametro (87)
    en la izquierda: 51 52, en la derecha: 49 50
nombreTipo (88)
    en la izquierda: 53, en la derecha: 141
declaradorAbstracto (89)
    en la izquierda: 54 55 56, en la derecha: 52 58 59
declaradorAbstractoBis (90)
    en la izquierda: 57 58, en la derecha: 53
declaradorAbstractoDirecto (91)
    en la izquierda: 59 60 61, en la derecha: 54 55 60
opcionExpresion (92)
    en la izquierda: 62 63, en la derecha: 60 61
sentencia (93)
    en la izquierda: 64 65 66 67 68 69, en la derecha: 4 80 81 84 85
    86 87 88 89 90 91 92
sentExpresion (94)
    en la izquierda: 70 71, en la derecha: 65
sentCompuesta (95)
    en la izquierda: 72, en la derecha: 64 161
decalracionOSentencia (96)
    en la izquierda: 73 74 75, en la derecha: 72 74 75
listaDeclaraciones (97)
    en la izquierda: 76 77, en la derecha: 74 77 79
listaDeclaracionesBis (98)
    en la izquierda: 78 79, en la derecha: 161
listaSentencias (99)
    en la izquierda: 80 81, en la derecha: 75 81
puntero (100)
    en la izquierda: 82 83, en la derecha: 38 54 56 83 139
sentSeleccion (101)
    en la izquierda: 84 85 86, en la derecha: 66
sentIteracion (102)
    en la izquierda: 87 88 89, en la derecha: 67
sentEtiquetada (103)
    en la izquierda: 90 91 92, en la derecha: 69
sentSalto (104)
    en la izquierda: 93 94 95 96, en la derecha: 68
exp (105)
    en la izquierda: 97 98, en la derecha: 70 84 85 86 87 88 98 100
    104 143 155
expOp (106)
    en la izquierda: 99 100, en la derecha: 89 93
expAsignacion (107)
    en la izquierda: 101 102, en la derecha: 17 97 98 102 157 158
expCondicional (108)
    en la izquierda: 103 104, en la derecha: 37 90 101 104 106
expCondicionalBis (109)
    en la izquierda: 105 106, en la derecha: 43 62
operAsignacion (110)
    en la izquierda: 107 108 109 110 111, en la derecha: 102
expOr (111)
    en la izquierda: 112 113, en la derecha: 103 104 113
expAnd (112)
    en la izquierda: 114 115, en la derecha: 112 113 115
expIgualdad (113)
    en la izquierda: 116 117 118, en la derecha: 114 115 117 118
expRelacional (114)
    en la izquierda: 119 120 121 122 123, en la derecha: 116 117 118
    120 121 122 123
expAditiva (115)
    en la izquierda: 124 125 126, en la derecha: 119 120 121 122 123
    125 126
expMultiplicativa (116)
    en la izquierda: 127 128 129 130, en la derecha: 124 125 126 128
    129 130
expUnaria (117)
    en la izquierda: 131 132 133 134 135 136 137 138 139 140 141, en la derecha:
    102 127 128 129 130 132 133 134 135 136 137 138 139 140
expSufijo (118)
    en la izquierda: 142 143 144 145 146 147 148, en la derecha: 131
    143 144 145 146 147 148
expPrimaria (119)
    en la izquierda: 149 150 151 152 153 154 155, en la derecha: 142
listaArgumentos (120)
    en la izquierda: 156 157 158, en la derecha: 144 158
declaracionExterna (121)
    en la izquierda: 159 160, en la derecha: 3 76 77
definicionFuncion (122)
    en la izquierda: 161, en la derecha: 159


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end                  desplazar e ir al estado 2
    error                 desplazar e ir al estado 3
    REAL                  desplazar e ir al estado 4
    ENTERO                desplazar e ir al estado 5
    LITERAL_CADENA        desplazar e ir al estado 6
    INCREMENTO            desplazar e ir al estado 7
    DECREMENTO            desplazar e ir al estado 8
    IF                    desplazar e ir al estado 9
    SWITCH                desplazar e ir al estado 10
    WHILE                 desplazar e ir al estado 11
    DO                    desplazar e ir al estado 12
    FOR                   desplazar e ir al estado 13
    RETURN                desplazar e ir al estado 14
    CONTINUE              desplazar e ir al estado 15
    BREAK                 desplazar e ir al estado 16
    CASE                  desplazar e ir al estado 17
    DEFAULT               desplazar e ir al estado 18
    GOTO                  desplazar e ir al estado 19
    NULL1                 desplazar e ir al estado 20
    TIPO_DATO             desplazar e ir al estado 21
    CLASE_ALMACENAMIENTO  desplazar e ir al estado 22
    STRUCT_UNION          desplazar e ir al estado 23
    ID                    desplazar e ir al estado 24
    SIZEOF                desplazar e ir al estado 25
    CTE_CARACTER          desplazar e ir al estado 26
    '+'                   desplazar e ir al estado 27
    '-'                   desplazar e ir al estado 28
    '*'                   desplazar e ir al estado 29
    '('                   desplazar e ir al estado 30
    ';'                   desplazar e ir al estado 31
    '{'                   desplazar e ir al estado 32
    '~'                   desplazar e ir al estado 33
    '!'                   desplazar e ir al estado 34
    '&'                   desplazar e ir al estado 35

    line                ir al estado 36
    declaracion         ir al estado 37
    especDeclaracion    ir al estado 38
    especClase          ir al estado 39
    especTipo           ir al estado 40
    especStructUnion    ir al estado 41
    sentencia           ir al estado 42
    sentExpresion       ir al estado 43
    sentCompuesta       ir al estado 44
    puntero             ir al estado 45
    sentSeleccion       ir al estado 46
    sentIteracion       ir al estado 47
    sentEtiquetada      ir al estado 48
    sentSalto           ir al estado 49
    exp                 ir al estado 50
    expAsignacion       ir al estado 51
    expCondicional      ir al estado 52
    expOr               ir al estado 53
    expAnd              ir al estado 54
    expIgualdad         ir al estado 55
    expRelacional       ir al estado 56
    expAditiva          ir al estado 57
    expMultiplicativa   ir al estado 58
    expUnaria           ir al estado 59
    expSufijo           ir al estado 60
    expPrimaria         ir al estado 61
    declaracionExterna  ir al estado 62
    definicionFuncion   ir al estado 63


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    5 line: error . ';'

    ';'  desplazar e ir al estado 64


estado 4

  151 expPrimaria: REAL .

    $default  reduce usando la regla 151 (expPrimaria)


estado 5

  150 expPrimaria: ENTERO .

    $default  reduce usando la regla 150 (expPrimaria)


estado 6

  153 expPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 153 (expPrimaria)


estado 7

  132 expUnaria: INCREMENTO . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 45
    expUnaria    ir al estado 66
    expSufijo    ir al estado 60
    expPrimaria  ir al estado 61


estado 8

  133 expUnaria: DECREMENTO . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 45
    expUnaria    ir al estado 67
    expSufijo    ir al estado 60
    expPrimaria  ir al estado 61


estado 9

   84 sentSeleccion: IF . '(' exp ')' sentencia
   85              | IF . '(' exp ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 68


estado 10

   86 sentSeleccion: SWITCH . '(' exp ')' sentencia

    '('  desplazar e ir al estado 69


estado 11

   87 sentIteracion: WHILE . '(' exp ')' sentencia

    '('  desplazar e ir al estado 70


estado 12

   88 sentIteracion: DO . sentencia WHILE '(' exp ')' ';'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    IF              desplazar e ir al estado 9
    SWITCH          desplazar e ir al estado 10
    WHILE           desplazar e ir al estado 11
    DO              desplazar e ir al estado 12
    FOR             desplazar e ir al estado 13
    RETURN          desplazar e ir al estado 14
    CONTINUE        desplazar e ir al estado 15
    BREAK           desplazar e ir al estado 16
    CASE            desplazar e ir al estado 17
    DEFAULT         desplazar e ir al estado 18
    GOTO            desplazar e ir al estado 19
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 24
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    ';'             desplazar e ir al estado 31
    '{'             desplazar e ir al estado 32
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    sentencia          ir al estado 71
    sentExpresion      ir al estado 43
    sentCompuesta      ir al estado 44
    puntero            ir al estado 45
    sentSeleccion      ir al estado 46
    sentIteracion      ir al estado 47
    sentEtiquetada     ir al estado 48
    sentSalto          ir al estado 49
    exp                ir al estado 50
    expAsignacion      ir al estado 51
    expCondicional     ir al estado 52
    expOr              ir al estado 53
    expAnd             ir al estado 54
    expIgualdad        ir al estado 55
    expRelacional      ir al estado 56
    expAditiva         ir al estado 57
    expMultiplicativa  ir al estado 58
    expUnaria          ir al estado 59
    expSufijo          ir al estado 60
    expPrimaria        ir al estado 61


estado 13

   89 sentIteracion: FOR . '(' expOp ';' expOp ';' expOp ')' sentencia

    '('  desplazar e ir al estado 72


estado 14

   93 sentSalto: RETURN . expOp ';'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    $default  reduce usando la regla 99 (expOp)

    puntero            ir al estado 45
    exp                ir al estado 73
    expOp              ir al estado 74
    expAsignacion      ir al estado 51
    expCondicional     ir al estado 52
    expOr              ir al estado 53
    expAnd             ir al estado 54
    expIgualdad        ir al estado 55
    expRelacional      ir al estado 56
    expAditiva         ir al estado 57
    expMultiplicativa  ir al estado 58
    expUnaria          ir al estado 59
    expSufijo          ir al estado 60
    expPrimaria        ir al estado 61


estado 15

   95 sentSalto: CONTINUE . ';'

    ';'  desplazar e ir al estado 75


estado 16

   94 sentSalto: BREAK . ';'

    ';'  desplazar e ir al estado 76


estado 17

   90 sentEtiquetada: CASE . expCondicional ':' sentencia

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero            ir al estado 45
    expCondicional     ir al estado 77
    expOr              ir al estado 53
    expAnd             ir al estado 54
    expIgualdad        ir al estado 55
    expRelacional      ir al estado 56
    expAditiva         ir al estado 57
    expMultiplicativa  ir al estado 58
    expUnaria          ir al estado 78
    expSufijo          ir al estado 60
    expPrimaria        ir al estado 61


estado 18

   91 sentEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 79


estado 19

   96 sentSalto: GOTO . ID ';'

    ID  desplazar e ir al estado 80


estado 20

  154 expPrimaria: NULL1 .

    $default  reduce usando la regla 154 (expPrimaria)


estado 21

   22 especTipo: TIPO_DATO .

    $default  reduce usando la regla 22 (especTipo)


estado 22

   21 especClase: CLASE_ALMACENAMIENTO .

    $default  reduce usando la regla 21 (especClase)


estado 23

   24 especStructUnion: STRUCT_UNION . ID opcionLista
   25                 | STRUCT_UNION . '{' listaDeclaracionesStruct '}'

    ID   desplazar e ir al estado 81
    '{'  desplazar e ir al estado 82


estado 24

   92 sentEtiquetada: ID . ':' sentencia
  149 expPrimaria: ID .

    ':'  desplazar e ir al estado 83

    $default  reduce usando la regla 149 (expPrimaria)


estado 25

  140 expUnaria: SIZEOF . '(' expUnaria ')'
  141          | SIZEOF . '(' nombreTipo ')'

    '('  desplazar e ir al estado 84


estado 26

  152 expPrimaria: CTE_CARACTER .

    $default  reduce usando la regla 152 (expPrimaria)


estado 27

  135 expUnaria: '+' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 45
    expUnaria    ir al estado 85
    expSufijo    ir al estado 60
    expPrimaria  ir al estado 61


estado 28

  134 expUnaria: '-' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 45
    expUnaria    ir al estado 86
    expSufijo    ir al estado 60
    expPrimaria  ir al estado 61


estado 29

   82 puntero: '*' .
   83        | '*' . puntero

    $default  reduce usando la regla 82 (puntero)

    puntero  ir al estado 87


estado 30

  155 expPrimaria: '(' . exp ')'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero            ir al estado 45
    exp                ir al estado 88
    expAsignacion      ir al estado 51
    expCondicional     ir al estado 52
    expOr              ir al estado 53
    expAnd             ir al estado 54
    expIgualdad        ir al estado 55
    expRelacional      ir al estado 56
    expAditiva         ir al estado 57
    expMultiplicativa  ir al estado 58
    expUnaria          ir al estado 59
    expSufijo          ir al estado 60
    expPrimaria        ir al estado 61


estado 31

   71 sentExpresion: ';' .

    $default  reduce usando la regla 71 (sentExpresion)


estado 32

   72 sentCompuesta: '{' . decalracionOSentencia '}'

    $default  reduce usando la regla 73 (decalracionOSentencia)

    decalracionOSentencia  ir al estado 89


estado 33

  136 expUnaria: '~' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 45
    expUnaria    ir al estado 90
    expSufijo    ir al estado 60
    expPrimaria  ir al estado 61


estado 34

  137 expUnaria: '!' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 45
    expUnaria    ir al estado 91
    expSufijo    ir al estado 60
    expPrimaria  ir al estado 61


estado 35

  138 expUnaria: '&' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 45
    expUnaria    ir al estado 92
    expSufijo    ir al estado 60
    expPrimaria  ir al estado 61


estado 36

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 37

  160 declaracionExterna: declaracion .

    $default  reduce usando la regla 160 (declaracionExterna)


estado 38

    6 declaracion: especDeclaracion . listaDeclaradoresBis ';'
  161 definicionFuncion: especDeclaracion . decla listaDeclaracionesBis sentCompuesta

    ID   desplazar e ir al estado 93
    '*'  desplazar e ir al estado 29

    $default  reduce usando la regla 11 (listaDeclaradoresBis)

    listaDeclaradoresBis  ir al estado 94
    listaDeclaradores     ir al estado 95
    declarador            ir al estado 96
    decla                 ir al estado 97
    declaradorDirecto     ir al estado 98
    puntero               ir al estado 99


estado 39

    9 especDeclaracion: especClase . especDeclaracionBis

    TIPO_DATO             desplazar e ir al estado 21
    CLASE_ALMACENAMIENTO  desplazar e ir al estado 22
    STRUCT_UNION          desplazar e ir al estado 23

    $default  reduce usando la regla 7 (especDeclaracionBis)

    especDeclaracionBis  ir al estado 100
    especDeclaracion     ir al estado 101
    especClase           ir al estado 39
    especTipo            ir al estado 40
    especStructUnion     ir al estado 41


estado 40

   10 especDeclaracion: especTipo . especDeclaracionBis

    TIPO_DATO             desplazar e ir al estado 21
    CLASE_ALMACENAMIENTO  desplazar e ir al estado 22
    STRUCT_UNION          desplazar e ir al estado 23

    $default  reduce usando la regla 7 (especDeclaracionBis)

    especDeclaracionBis  ir al estado 102
    especDeclaracion     ir al estado 101
    especClase           ir al estado 39
    especTipo            ir al estado 40
    especStructUnion     ir al estado 41


estado 41

   23 especTipo: especStructUnion .

    $default  reduce usando la regla 23 (especTipo)


estado 42

    4 line: sentencia .

    $default  reduce usando la regla 4 (line)


estado 43

   65 sentencia: sentExpresion .

    $default  reduce usando la regla 65 (sentencia)

